# video-uploader

./: .flake8  .gitignore  Dockerfile  README.md  bandit.yaml  docker-compose.yml  pyproject.toml
src/common/: transcoders.py
src/common/ninja/: parser.py  renderers.py  security.py
src/config/: celery.py  settings.py  urls.py
src/main/: schemas.py  tasks.py  views.py
